--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -6,22 +6,22 @@ import Sabermas from "./icons/Sabermas.astro";
 
 <section class="h-dvh grid place-content-center max-w-5xl m-auto px-4">
   <div class="flex flex-col items-center">
-    <h1 class="text-7xl bg-clip-text">Rodrigo Gimenez</h1>
-    <h2 class="-mt-2 text-2xl luz">Desarrollador Front-End</h2>
+    <h1 class="text-5xl md:text-7xl bg-clip-text">Rodrigo Gimenez</h1>
+    <h2 class="-mt-2 text-xl md:text-2xl luz">Desarrollador Front-End</h2>
   </div>
   <div class="flex items-center gap-4 justify-center mt-4">
     <button
       style="--iluminacion: #0096fa"
-      class="flex items-center gap-2 bg-slate-700/50 hover:bg-sky-600/50 px-3 btn py-2 rounded-full iluminacion"
+      class="flex items-center gap-2 bg-slate-700/50 hover:bg-sky-600/50 px-3 btn py-2 rounded-full iluminacion text-sm md:text-base"
     >
-      <Sabermas class="size-6" />
+      <Sabermas class="size-5 md:size-6" />
       Saber mas
     </button>
     <button
       style="--iluminacion: #0096fa"
-      class="flex items-center gap-2 bg-slate-700/50 hover:bg-sky-600/50 px-3 btn py-2 rounded-full iluminacion"
+      class="flex items-center gap-2 bg-slate-700/50 hover:bg-sky-600/50 px-3 btn py-2 rounded-full iluminacion text-sm md:text-base"
     >
-      <Proyectosicon class="size-6" />
+      <Proyectosicon class="size-5 md:size-6" />
       Proyectos
     </button>
     <ButtonEffect client:load />
