--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,10 +1,11 @@
 ---
 import ButtonEffect from "./ButtonEffect";
+import Cuadricula from "./Cuadricula.astro";
 import Proyectosicon from "./icons/Proyectosicon.astro";
 import Sabermas from "./icons/Sabermas.astro";
 ---
-
-<section class="h-dvh grid place-content-center max-w-5xl m-auto px-4">
+<section class="h-dvh grid place-content-center max-w-5xl m-auto px-4 ">
+  <Cuadricula />
   <div class="flex flex-col items-center">
     <h1 class="text-5xl md:text-7xl bg-clip-text">Rodrigo Gimenez</h1>
     <h2 class="-mt-2 text-xl md:text-2xl luz">Desarrollador Front-End</h2>
