--- a/src/components/Cuadricula.astro
+++ b/src/components/Cuadricula.astro
@@ -1,107 +1,124 @@
 <div
-        class="z-[5] pointer-events-none absolute inset-0 flex w-screen items-center justify-center overflow-hidden [mask-image:radial-gradient(transparent_15%,white)]"
+  class="z-[5] pointer-events-none absolute inset-0 flex w-screen items-center justify-center overflow-hidden [mask-image:radial-gradient(transparent_15%,white)]"
+>
+  <svg
+    class="absolute z-[5] left-0 top-0 size-full stroke-white/20 stroke-[1] [mask-image:linear-gradient(transparent_15%,white,transparent_85%)]"
+    data-n-ids='{"1a4MN34vH0:0":"1a4MN34vH0:0"}'
+  >
+    <rect
+      width="100%"
+      height="100%"
+      stroke-width="0"
+      fill="url(#grid-pattern-1a4MN34vH0:0)"
+    ></rect>
+    <svg>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="97"
+        y="97"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="385"
+        y="193"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="193"
+        y="289"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="673"
+        y="289"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="481"
+        y="385"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="1249"
+        y="97"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="1"
+        y="481"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="577"
+        y="481"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="1441"
+        y="385"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="1057"
+        y="289"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="961"
+        y="481"
+        class="pointer-events-auto fill-white/20 hover:fill-white/30 transition duration-500"
+      ></rect>
+      <rect
+        stroke-width="0"
+        width="95"
+        height="95"
+        x="1249"
+        y="577"
+        class="pointer-events-auto fill-white/10 transition duration-500"
+      ></rect>
+    </svg>
+    <defs>
+      <pattern
+        id="grid-pattern-1a4MN34vH0:0"
+        viewBox="0 0 64 64"
+        width="96"
+        height="96"
+        patternUnits="userSpaceOnUse"
       >
-        <svg
-          class="absolute z-[5] left-0 top-0 size-full stroke-black/10 dark:stroke-white/20 stroke-[1] [mask-image:linear-gradient(transparent_15%,white,transparent_85%)]"
-          data-n-ids='{"1a4MN34vH0:0":"1a4MN34vH0:0"}'
-          ><rect
-            width="100%"
-            height="100%"
-            stroke-width="0"
-            fill="url(#grid-pattern-1a4MN34vH0:0)"></rect><svg
-            ><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="97"
-              y="97"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="385"
-              y="193"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="193"
-              y="289"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="673"
-              y="289"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="481"
-              y="385"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="1249"
-              y="97"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="1"
-              y="481"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="577"
-              y="481"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="1441"
-              y="385"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="1057"
-              y="289"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="961"
-              y="481"
-              class="pointer-events-auto fill-black/5 hover:fill-black/10 dark:fill-white/20 dark:hover:fill-white/30 transition duration-500"
-            ></rect><rect
-              stroke-width="0"
-              width="95"
-              height="95"
-              x="1249"
-              y="577"
-              class="pointer-events-auto fill-muted/5 transition duration-500 hover:fill-white/10"
-            ></rect></svg
-          ><defs
-            ><pattern
-              id="grid-pattern-1a4MN34vH0:0"
-              viewBox="0 0 64 64"
-              width="96"
-              height="96"
-              patternUnits="userSpaceOnUse"
-              ><path d="M64 0H0V64" fill="none"></path></pattern
-            ></defs
-          ></svg>
-      </div>  
+        <path d="M64 0H0V64" fill="none"></path>
+      </pattern>
+    </defs>
+  </svg>
+</div>
