--- a/src/components/Acercade.astro
+++ b/src/components/Acercade.astro
@@ -6,26 +6,26 @@ import Sectioncontainer from "./Sectioncontainer.astro";
 ---
 <div class="border border-[#242223]"></div>
 <Sectioncontainer >
-   <div class=" grid md:grid-cols-12 md:grid-rows-9 h-dvh border border-[#242223] border-t-0 border-l-0">
-     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 row-span-1 border border-[#242223] flex items-center pl-4" >
+   <div class=" grid md:grid-cols-12 md:grid-rows-9 h-dvh md:border border-[#242223] md:border-t-0 border-l-0">
+     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 md:row-span-1 md:border border-[#242223] flex items-center pl-4" >
                  <div class="flex gap-2 items-center uppercase font-medium">
                      <Mailicon class="size-6   fill-blue-400"/>
                      <h2>Contactame</h2>
                  </div>
      </a>
-     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 row-span-1 border border-[#242223] border-t-0 border-l-0 flex items-center pl-4" >
+     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 md:row-span-1 md:border border-[#242223] border-t-0 md:border-l-0 flex items-center pl-4" >
                  <div class="flex gap-2 items-center uppercase font-medium">
                      <Telegramicon />
                      <h2>Telegram</h2>
                  </div>
      </a>
-     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 row-span-1 border border-[#242223] border-t-0 border-l-0 flex items-center pl-4" >
+     <a href="" class="col-span-1 md:col-span-4 hover:bg-slate-900/15 md:row-span-1 md:border border-[#242223] border-t-0 md:border-l-0 flex items-center pl-4" >
                  <div class="flex gap-2 items-center uppercase font-medium">
                      <Cvicon />
                      <h2>cv</h2>
                  </div>
      </a>
-     <section class="col-span-6 py-4 pl-7  row-span-7 border border-[#242223] border-t-0">
+     <section class="md:col-span-6 py-4 pl-7  row-span-7 border border-[#242223] border-t-0">
         
         <ol class="relative border-s dark:border-gray-700">                  
             <li class="mb-10 ms-6">            
@@ -68,6 +68,6 @@ import Sectioncontainer from "./Sectioncontainer.astro";
         
 
      </section>
-     <section class="col-span-6">a</section>
+     <section class="md:col-span-6">a</section>
    </div>
 </Sectioncontainer>
