--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,4 +31,37 @@ const { title } = Astro.props;
 		background: #050304;
 		color: #f2f2f2;
 	}
+
+	.luz {
+    background: linear-gradient(to right, #0096fa 35%, #004175 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+  }
+  .iluminacion {
+    position: relative;
+    overflow: hidden;
+  }
+  .iluminacion::before {
+    content: "";
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 9999px;
+    background: var(--iluminacion);
+    z-index: -1;
+    filter: blur(10px);
+    transform: translate(-50%, -50%);
+    top: var(--y, 50%);
+    left: var(--x, 50%);
+    opacity: 0;
+    transition:
+      opacity 0.3s ease,
+      transform 0.1s linear;
+  }
+
+  .iluminacion.active::before {
+    opacity: 1;
+  }
 </style>
