--- a/src/components/Acercade.astro
+++ b/src/components/Acercade.astro
@@ -17,7 +17,7 @@ import Sectioncontainer from "./Sectioncontainer.astro";
 ---
 
 <div class="border border-[#242223]"></div>
-<section>
+<section class="md:max-w-6xl md:m-auto">
   <div
     class="grid md:grid-cols-12 md:grid-rows-9 h-dvh md:border border-[#242223] md:border-t-0 border-l-0"
   >
