--- a/src/components/Acercade.astro
+++ b/src/components/Acercade.astro
@@ -64,14 +64,9 @@ import Lineatiempo from "./Lineatiempo.astro";
       </div>
     </button>
     <ButtonEffect client:load />
-    <section class="md:col-span-6 md:row-span-7 py-4 pl-7 row-span-7 border border-[#242223] border-t-1 md:border-t-0  mt-4 md:mt-0">
-        <img src="/rodridev.png" alt="Imagen de Rodrigo Gimenez" class="size-20">
-        <h2 class="text-sky-700 flex items-center gap-2 text-xl">Sobre mi</h2>
-        <p class="mb-3  text-gray-400 pr-2 md:pr-4">Desarrollador Frontend de 23 años, con experiencia intermedia en tecnologías frontend y conocimientos básicos de backend. Como autodidacta, siempre busco nuevas oportunidades de aprendizaje y desafíos que impulsen mi crecimiento y contribuyan a soluciones innovadoras.</p>
-
-    </section>
+    
     <section
-      class="md:col-span-6 py-4 pl-7 row-span-7 border border-[#242223] border-t-1 md:border-t-0  mt-4 md:mt-0"
+      class="md:col-span-6 py-4 pl-7 row-span-7 border border-[#242223] border-t-1 md:border-t-0  pt-4 md:mt-0"
     >
     <h2 class="text-sky-700 flex items-center gap-2 text-xl"><Proyectosicon/> Educacion</h2>
       <ol class="relative border-s dark:border-gray-700 mt-5">
