--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,12 @@ import Tailwindicon from "../components/icons/Tailwindicon.astro";
 import Nextjsicon from "../components/icons/Nextjsicon.astro";
 import Home from "../components/Home.astro";
 import Acercade from "../components/Acercade.astro";
+import Proyectos from "../components/Proyectos.astro";
 ---
 
 <Layout title="Porfolio - Soyrodri.dev">
   <BgLight />
-	
   <Home />
 	<Acercade />
-	  
+	<Proyectos />
+</Layout>
