--- a/src/components/Cardinfo.astro
+++ b/src/components/Cardinfo.astro
@@ -10,7 +10,7 @@ import Proyectosicon from "./icons/Proyectosicon.astro";
         <div class="w-full h-[.10rem] bg-[#242223] absolute inset-0 top-1/2 bottom-1/2 z-0"></div>
         <div class="w-[.10rem] h-full bg-[#242223] absolute left-1/2 right-1/2 z-0"></div>
         <section class="absolute inset-4  z-1  ">
-          <div class=" bg-gris/50 backdrop-blur rounded-2xl p-2 relative bgbefore">
+          <div class=" bg-gris/50 backdrop-blur rounded-2xl h-full p-2 relative bgbefore">
             <div class="flex gap-4 justify-start pl-4 py-4">
               <img src="/rodridev.png" alt="Imagen de Rodrigo Gimenez" class="size-16">
               <div class="flex flex-col justify-center">
