--- a/src/components/icons/Cssicon.astro
+++ b/src/components/icons/Cssicon.astro
@@ -1,7 +1,7 @@
 <svg
   xmlns="http://www.w3.org/2000/svg"
   width="1000"
-  class={Astro.props.class}
+  class=`size-4 ${Astro.props.class}`
   height="1000"
   aria-labelledby="css-logo-title css-logo-description"
   viewBox="0 0 1000 1000"
