--- a/src/components/icons/Mysqlicon.astro
+++ b/src/components/icons/Mysqlicon.astro
@@ -1,6 +1,6 @@
 <svg
   xmlns="http://www.w3.org/2000/svg"
-  class="size-4"
+  class=`size-4 ${Astro.props.class}`
   preserveAspectRatio="xMidYMid"
   viewBox="0 0 256 252"
 >
