--- a/src/components/icons/Nextjsicon.astro
+++ b/src/components/icons/Nextjsicon.astro
@@ -1,5 +1,6 @@
 <svg
-  class="size-4"
+  
+  class=`size-4 ${Astro.props.class}`
   xmlns="http://www.w3.org/2000/svg"
   width="256"
   height="256"
