--- a/src/components/icons/Tailwindicon.astro
+++ b/src/components/icons/Tailwindicon.astro
@@ -3,7 +3,7 @@
   width="256"
   height="154"
   xmlns="http://www.w3.org/2000/svg"
-  class={Astro.props.class}
+  class=`size-4 ${Astro.props.class}`
   preserveAspectRatio="xMidYMid"
 >
   <defs
