--- a/src/components/icons/Typescripticon.astro
+++ b/src/components/icons/Typescripticon.astro
@@ -2,7 +2,7 @@
   viewBox="0 0 256 256"
   width="256"
   height="256"
-  class="size-4"
+  class=`size-4 ${Astro.props.class}`
   xmlns="http://www.w3.org/2000/svg"
   preserveAspectRatio="xMidYMid"
   ><path
