--- a/src/components/icons/Htmlicon.astro
+++ b/src/components/icons/Htmlicon.astro
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520" class={Astro.props.class}>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520" class=`size-4 ${Astro.props.class}`>
   <path fill="#e34f26" d="M41 460L0 0h451l-41 460-185 52"></path>
   <path fill="#ef652a" d="M226 472l149-41 35-394H226"></path>
   <path
