--- a/src/components/Cardinfo.astro
+++ b/src/components/Cardinfo.astro
@@ -20,7 +20,7 @@ import Proyectosicon from "./icons/Proyectosicon.astro";
                 <h3 class="text-sky-400/80">Un poco mas sobre mi</h3>
               </div>
             </div>
-            <p class="text-lg text-balance text-gray-300">Desarrollador Frontend de 23 años, con experiencia intermedia en tecnologías frontend y conocimientos básicos de backend. Como autodidacta, siempre busco nuevas oportunidades de aprendizaje y desafíos que impulsen mi crecimiento y contribuyan a soluciones innovadoras.</p>
+            <p class="text-lg text-balance text-gray-300">Desarrollador Frontend de 23 años con experiencia en tecnologías frontend y conocimientos fundamentales de backend. Apasionado por el aprendizaje autodidacta, busco constantemente desafíos que impulsen mi crecimiento profesional y me permitan contribuir con soluciones web innovadoras y efectivas.</p>
             <div class="flex gap-4 mt-4 pl-1">
               <a href="" class="flex items-center gap-1 bg-gris hover:bg-[#292828] px-2 py-1 text-lg  rounded-lg">
                 <Linkedin class="size-4"/> Linkedin
