--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -4,8 +4,19 @@ import Cuadricula from "./Cuadricula.astro";
 import Proyectosicon from "./icons/Proyectosicon.astro";
 import Sabermas from "./icons/Sabermas.astro";
 ---
-<section class="h-dvh min-h-screen relative w-full overflow-hidden grid place-content-center max-w-5xl m-auto ">
+<section class="h-dvh min-h-screen relative w-full overflow-hidden grid place-content-center max-w-7xl m-auto ">
   <Cuadricula />
+  <div
+    class="absolute pointer-events-none animate-fade-in bg-ambientLight left-0 top-0 h-[1380px] w-[560px] rounded-full translate-y-[-350px] rotate-[-45deg]"
+  >
+  </div><div
+    class="absolute pointer-events-none animate-fade-in bg-ambientLight3 left-0 top-0 h-[1380px] w-[240px] rounded-full translate-y-[-70%] translate-x-[-180%] rotate-[-45deg]"
+  >
+  </div><div
+    class="absolute pointer-events-none animate-fade-in bg-ambientLight2 left-0 top-0 h-[1380px] w-[240px] rounded-full translate-y-[-50%] translate-x-[5%] rotate-[-45deg]"
+  >
+  </div>
+  
   <div class="flex flex-col items-center px-4">
     <h1 class="text-5xl md:text-7xl bg-clip-text">Rodrigo Gimenez</h1>
     <h2 class="-mt-2 text-xl md:text-2xl luz">Desarrollador Front-End</h2>
