--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,15 @@ const { title } = Astro.props;
 		background: #050304;
 		color: #f2f2f2;
 	}
+  .bg-ambientLight {
+    background-image: radial-gradient(68.54% 68.72% at 55.02% 31.46%, hsla(0, 0%, 85%, .08) 0, hsla(0, 0%, 55%, .02) 50%, hsla(0, 0%, 45%, 0) 80%);
+}
+.bg-ambientLight3 {
+    background-image: radial-gradient(50% 50% at 50% 50%, hsla(0, 0%, 85%, .04) 0, hsla(0, 0%, 45%, .02) 80%, transparent 100%);
+}
+.bg-ambientLight2 {
+    background-image: radial-gradient(50% 50% at 50% 50%, hsla(0, 0%, 85%, .06) 0, hsla(0, 0%, 45%, .02) 80%, transparent 100%);
+}
 
 	.luz {
     background: linear-gradient(to right, #0096fa 35%, #004175 100%);
