--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -4,7 +4,7 @@ import Cuadricula from "./Cuadricula.astro";
 import Proyectosicon from "./icons/Proyectosicon.astro";
 import Sabermas from "./icons/Sabermas.astro";
 ---
-<section class="h-dvh min-h-screen relative w-full overflow-hidden grid place-content-center max-w-7xl m-auto ">
+<section class="h-dvh min-h-screen relative w-full overflow-hidden grid place-content-center container m-auto ">
   <Cuadricula />
   <div
     class="absolute pointer-events-none animate-fade-in bg-ambientLight left-0 top-0 h-[1380px] w-[560px] rounded-full translate-y-[-350px] rotate-[-45deg]"
