--- a/src/components/Acercade.astro
+++ b/src/components/Acercade.astro
@@ -6,7 +6,7 @@ import Lineadetiempo from "./Lineadetiempo.astro";
 ---
 
 <div class="border border-[#242223] w-full"></div>
-<section class=" w-full md:max-w-6xl md:m-auto">
+<section class=" w-full md:max-w-6xl md:m-auto" id="acercade">
   <header
     class="grid grid-cols-1 md:grid-cols-3    md:border border-[#242223] md:border-t-0 border-l-0"
   >
