--- a/src/components/Buttongroup.astro
+++ b/src/components/Buttongroup.astro
@@ -14,7 +14,7 @@ import Viewicon from "./icons/Viewicon.astro";
 class="col-span-1 h-20 hover:bg-slate-900/15  md:border border-[#242223] pl-4 pr-2 btn-arrow btn iluminacion"
 style="--iluminacion: #0096fa"
 >
-<a href="" class="flex items-center justify-between">
+<a href="mailto:rodrigogfxs@gmail.com" class="flex items-center justify-between">
   <div class="flex gap-2 items-center uppercase font-medium">
     <Mailicon class="size-6 fill-blue-400" />
     <h2>Contactame</h2>
@@ -26,7 +26,7 @@ style="--iluminacion: #0096fa"
 class="col-span-1 h-20  hover:bg-slate-900/15  md:border border-[#242223] pl-4 pr-2 btn-arrow btn iluminacion"
 style="--iluminacion: #0096fa"
 >
-<a href="" class="flex justify-between">
+<a target="_blank" href="https://t.me/soyrodridev" class="flex justify-between">
   <div class="flex gap-2 items-center uppercase font-medium">
     <Telegramicon />
     <h2>Telegram</h2>
