--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -36,7 +36,7 @@ const tecnologiaNames: Record<string, string> = {
 };
 ---
 
-<section class="lg:container mx-auto px-4 my-10">
+<section class="lg:container mx-auto px-4 my-20" id="proyectos">
     <h2 class="text-sky-700 flex items-center gap-2 text-2xl my-4">
         <Proyectosicon /> Proyectos
     </h2>
