--- a/src/components/Cardinfo.astro
+++ b/src/components/Cardinfo.astro
@@ -5,8 +5,8 @@ import Linkedin from "./icons/Linkedin.astro";
 import Proyectosicon from "./icons/Proyectosicon.astro";
 ---
 
-<section class="w-full  mt-4 ">
-      <div class="w-full h-[460px] md:h-[25rem] overflow-hidden border border-[#242223] relative  rounded-2xl ">
+<section class="w-full  my-20 ">
+      <div class="w-full h-[500px] md:h-[25rem] overflow-hidden border border-[#242223] relative  rounded-2xl ">
         <div class="w-full h-[.10rem] bg-[#242223] absolute inset-0 top-1/2 bottom-1/2 z-0"></div>
         <div class="w-[.10rem] h-full bg-[#242223] absolute left-1/2 right-1/2 z-0"></div>
         <section class="absolute inset-4  z-1  ">
@@ -22,10 +22,10 @@ import Proyectosicon from "./icons/Proyectosicon.astro";
             </div>
             <p class="text-lg text-balance text-gray-300">Desarrollador Frontend de 23 años con experiencia en tecnologías frontend y conocimientos fundamentales de backend. Apasionado por el aprendizaje autodidacta, busco constantemente desafíos que impulsen mi crecimiento profesional y me permitan contribuir con soluciones web innovadoras y efectivas.</p>
             <div class="flex gap-4 mt-4 pl-1">
-              <a href="" class="flex items-center gap-1 bg-gris hover:bg-[#292828] px-2 py-1 text-lg  rounded-lg">
+              <a href="https://www.linkedin.com/in/rodrigo-gimenez-83122a26b/" target="_blank" class="flex items-center gap-1 bg-gris hover:bg-[#292828] px-2 py-1 text-lg  rounded-lg">
                 <Linkedin class="size-4"/> Linkedin
               </a>
-              <a href="" class="flex items-center gap-1 bg-gris hover:bg-[#292828] px-2 py-1 text-lg rounded-lg">
+              <a href="https://github.com/soyrodridev" target="_blank" class="flex items-center gap-1 bg-gris hover:bg-[#292828] px-2 py-1 text-lg rounded-lg">
                 <GitHub class="size-4"/> GitHub
               </a>
             </div>
